# video_hallucination

./: .gitignore  Makefile  README.md  benchmark.py  eval-qwen3_vl_8b_instruct-basic_direct.sh  eval-qwen3_vl_8b_instruct-basic_explain.sh  eval-qwen3_vl_8b_instruct-basic_refine.sh  eval-qwen3_vl_8b_instruct-hallucinated_direct.sh  eval-qwen3_vl_8b_instruct-hallucinated_explain.sh  eval-qwen3_vl_8b_instruct-hallucinated_refine.sh  eval_qwen3_eventhallusion.py  eval_qwen3_video_hallucer.py  extract_fps.py  infer.sh  main.py  pyproject.toml  step3_llm_decomposition.py  vibe_check.py  vibe_check_video_qa.py  videoqa_pipeline.py  visualize_outputs.py
benchmark/: sample_1.json  sample_10.json  sample_11.json  sample_12.json  sample_13.json  sample_14.json  sample_15.json  sample_16.json  sample_17.json  sample_18.json  sample_19.json  sample_2.json  sample_20.json  sample_21.json  sample_22.json  sample_23.json  sample_24.json  sample_25.json  sample_26.json  sample_27.json  sample_28.json  sample_29.json  sample_3.json  sample_30.json  sample_31.json  sample_32.json  sample_33.json  sample_34.json  sample_35.json  sample_36.json  sample_37.json  sample_38.json  sample_39.json  sample_4.json  sample_40.json  sample_41.json  sample_42.json  sample_43.json  sample_44.json  sample_45.json  (+51 more)
docs/: methodology.md
evaluation/: inspect_accuracy.py  inspect_question_answer_conflicts.py  judge_vanilla.py  llm_judge_accuracy.py
method/: run_baseline.py  run_pipeline.py
src/: answer_processing.py  cache_sys.py  eval_module.py  load_data.py  run_model.py
src/cache/: __init__.py  cache_sys.py
src/frame_selectors/: __init__.py  _clip_shared.py  _video_io.py  aks.py  base.py  clip_retrieval.py  efs.py  uniform.py
src/metrics/: __init__.py  accuracy.py  base.py  consistency.py
src/models/: __init__.py  base.py  claude.py  frame_pipeline.py  gemini.py  litellm.py  openai_gpt.py  openrouter_gemini.py  pseudo_gemini.py  qwen35_vl.py  qwen3_vl.py  traveler.py  vllm_openai.py  vllm_video.py
stages/: eval_tier2_flash_aggregator.py  eval_tier2_flash_aggregator_planner.py  stage_a_planner.py
tests/: test_metrics.py  test_vllm_openai.py
